--- a/nautilus/nautilus/core/communicate/master_playbook.yaml
+++ b/nautilus/nautilus/core/communicate/master_playbook.yaml
@@ -8,18 +8,6 @@
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
   tasks:
-  # - name: Ensure ~/.ssh directory exists
-  #   file:
-  #     path: ~/.ssh
-  #     state: directory
-  #     mode: '0700'
-
-  # - name: Copy public key to remote server
-  #   authorized_key:
-  #     user: "{{ ansible_user }}"
-  #     state: present
-  #     key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-        
   - name: Update system packages
     apt:
       update_cache: yes
@@ -41,7 +29,6 @@
       mode: '0755'
       owner: root
       group: root
-      
 
   - name: Add Docker GPG key
     get_url:
@@ -68,7 +55,7 @@
       dest: /etc/apt/sources.list.d/kubernetes.list
       content: 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.32/deb/ /'
 
-  - name: Update apt cache after adding Kubernetes repo
+  - name: Update apt cache after adding repositories
     apt:
       update_cache: yes
 
@@ -80,11 +67,28 @@
         - containerd.io
       state: present
 
-  - name: Start containerd service
-    systemd:
-      name: containerd
-      state: started
-      enabled: yes
+  - name: Configure containerd (SystemdCgroup)
+    block:
+      - name: Generate default containerd configuration
+        command: containerd config default
+        register: containerd_config
+
+      - name: Write the containerd configuration to file
+        copy:
+          content: "{{ containerd_config.stdout }}"
+          dest: /etc/containerd/config.toml
+
+      - name: Enable SystemdCgroup in containerd configuration
+        replace:
+          path: /etc/containerd/config.toml
+          regexp: '^\s*SystemdCgroup = false$'
+          replace: 'SystemdCgroup = true'
+
+      - name: Restart containerd service
+        systemd:
+          name: containerd
+          state: restarted
+          enabled: yes
 
   - name: Start Docker service
     systemd:
@@ -102,10 +106,7 @@
       update_cache: yes
 
   - name: Hold Kubernetes packages at current version
-    shell : |
-      apt-mark hold kubelet kubeadm kubectl
-    args:
-      warn: false
+    shell: apt-mark hold kubelet kubeadm kubectl
 
   - name: Enable and start kubelet service
     systemd:
@@ -124,87 +125,32 @@
       regexp: '^.*swap.*$'
       replace: ''
 
+  - name: Configure sysctl settings for Kubernetes networking
+    copy:
+      dest: /etc/sysctl.d/k8s.conf
+      content: |
+        net.bridge.bridge-nf-call-iptables = 1
+        net.ipv4.ip_forward = 1
+    notify: Reload sysctl
+
+  - name: Apply sysctl settings
+    command: sysctl --system
+
+  - name: Pre-pull Kubernetes images
+    command: kubeadm config images pull
+
   - name: Initialize Kubernetes cluster (only on master node)
-    command: kubeadm init --pod-network-cidr=192.168.0.0/16
+    command: kubeadm init --pod-network-cidr=192.168.0.0/16 --ignore-preflight-errors=all
 
   - name: Configure kubectl for the root user
-    command: >
-      bash -c "mkdir -p $HOME/.kube && cp /etc/kubernetes/admin.conf $HOME/.kube/config && chown $(id -u):$(id -g) $HOME/.kube/config"
+    shell: |
+      mkdir -p $HOME/.kube
+      cp /etc/kubernetes/admin.conf $HOME/.kube/config
+      chown $(id -u):$(id -g) $HOME/.kube/config
 
   - name: Deploy network plugin (Calico)
-    shell: |
-      kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
+    shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
 
-
-  - name: Configure containerd on worker nodes
-    block:
-      - name: Generate default containerd configuration
-        command: containerd config default
-        register: containerd_config
-        become: true
-
-      - name: Write the containerd configuration to file
-        copy:
-          content: "{{ containerd_config.stdout }}"
-          dest: /etc/containerd/config.toml
-        become: true        
-
-      - name: Enable SystemdCgroup in containerd configuration
-        replace:
-          path: /etc/containerd/config.toml
-          regexp: '^\s*SystemdCgroup = false$'
-          replace: '            SystemdCgroup = true'
-
-      - name: Create Docker configuration directory
-        file:
-          path: /etc/docker
-          state: directory
-
-      - name: Configure Docker daemon
-        copy:
-          dest: /etc/docker/daemon.json
-          content: |
-            {
-              "exec-opts": ["native.cgroupdriver=systemd"],
-              "log-driver": "json-file",
-              "log-opts": {
-                "max-size": "100m"
-              },
-              "storage-driver": "overlay2"
-            }
-
-      - name: Reload systemd configuration
-        command: systemctl daemon-reload
-
-      - name: Restart containerd service
-        systemd:
-          name: containerd
-          state: restarted
-          enabled: yes
-
-      - name: Restart Docker service
-        systemd:
-          name: docker
-          state: restarted
-          enabled: yes
-
-      - name: Restart kubelet service
-        systemd:
-          name: kubelet
-          state: restarted
-          enabled: yes
-
-  # - name: Generate kubeadm join command
-  #   when: inventory_hostname == groups['master'][0]
-  #   command: kubeadm token create --print-join-command
-  #   register: join_command
-
-  # - name: Share kubeadm join command with all nodes
-  #   when: inventory_hostname == groups['master'][0]
-  #   set_fact:
-  #     kubeadm_join_command: "{{ join_command.stdout }}"
-
-  # - name: Join worker nodes to the cluster
-  #   when: inventory_hostname != groups['master'][0]
-  #   command: "{{ hostvars[groups['master'][0]].kubeadm_join_command }}"
-
+  handlers:
+    - name: Reload sysctl
+      command: sysctl --system
