--- a/nautilus/nautilus/core/communicate/master_playbook.yaml
+++ b/nautilus/nautilus/core/communicate/master_playbook.yaml
@@ -29,16 +29,16 @@
 
   - name: Copy docker-compose.yml file
     copy:
-      src: ../../init-scripts/docker-compose.yml
-      dest: ../../init-scripts/docker-compose.yml
+      src: ../../../../init-scripts/docker-compose.yml
+      dest: ../../../../init-scripts/docker-compose.yml
 
   - name: Copy init SQL scripts
     copy:
-      src: ../../init-scripts/init_table.sql
-      dest: ../../init-scripts/init_table.sql
+      src: ../../../../init-scripts/init_table.sql
+      dest: ../../../../init-scripts/init_table.sql
 
   - name: Start PostgreSQL container
-    command: docker-compose -f ../../init-scripts/docker-compose.yml up -d
+    command: docker-compose -f ../../../../init-scripts/docker-compose.yml up -d
 
   - name: Add Docker GPG key
     get_url:
