--- a/init-scripts/docker-compose.yml
+++ b/init-scripts/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-scripts:/docker-entrypoint-initdb.d
+      - ./init_table.sql:/docker-entrypoint-initdb.d/init_table.sql
 
 volumes:
   postgres_data:
