--- a/nautilus/nautilus/core/communicate/master_playbook.yaml
+++ b/nautilus/nautilus/core/communicate/master_playbook.yaml
@@ -45,6 +45,7 @@
   - name: Ensure tables are created in PostgreSQL
     command: docker exec -i nautilus_postgres psql -U postgres -d nautilus_db -f /docker-entrypoint-initdb.d/init_table.sql
 
+
   - name: Deploy MinIO using Docker
     command: docker run -d --name minio --restart always -p 9000:9000 -p 9001:9001 -e MINIO_ROOT_USER=admin -e MINIO_ROOT_PASSWORD=admin123 minio/minio server /data --console-address ":9001"
 
@@ -57,9 +58,27 @@
   - name: Configure MinIO client
     command: mc alias set myminio http://127.0.0.1:9000 admin admin123
 
-  - name: Create MinIO bucket for images
+  - name: Wait for MinIO to be ready
+    command: sleep 10
+
+  - name: Check if MinIO is running
+    command: docker ps --filter "name=minio" --format "{{.Names}}"
+    register: minio_container_status
+
+  - name: Fail if MinIO container is not running
+    fail:
+      msg: "MinIO container is not running!"
+    when: "'minio' not in minio_container_status.stdout"
+
+  - name: Check existing MinIO buckets
+    command: mc ls myminio
+    register: minio_buckets
+    ignore_errors: yes
+
+  - name: Create MinIO bucket for images if not exists
     command: mc mb myminio/images
-    
+    when: "'images/' not in minio_buckets.stdout"
+
   - name: Add Docker GPG key
     get_url:
       url: https://download.docker.com/linux/ubuntu/gpg
