--- a/nautilus/nautilus/core/communicate/master_playbook.yaml
+++ b/nautilus/nautilus/core/communicate/master_playbook.yaml
@@ -161,7 +161,7 @@
   - name: Save join command
     copy:
       content: "{{ join_command.stdout }}"
-      dest: /home/ubuntu/kubeadm-join.sh
+      dest: ./kubeadm-join.sh
       mode: "0755"
 
   - name: Show join command for worker nodes
