--- a/nautilus/nautilus/workspace/ansible_project/playbook/master_playbook.yaml
+++ b/nautilus/nautilus/workspace/ansible_project/playbook/master_playbook.yaml
@@ -233,11 +233,14 @@
     command: kubeadm init --pod-network-cidr=192.168.0.0/16 --ignore-preflight-errors=all
     register: kubeadm_init_output
 
-  - name: Configure kubectl for root user
+  - name: Configure kubectl for non-root user
+    become: no
     shell: |
       mkdir -p $HOME/.kube
-      cp /etc/kubernetes/admin.conf $HOME/.kube/config
-      chown $(id -u):$(id -g) $HOME/.kube/config
+      sh -c "sudo cp /etc/kubernetes/admin.conf $HOME/.kube/config
+      sh -c "sudo chown $(id -u):$(id -g) $HOME/.kube/config
+      echo "export KUBECONFIG=$HOME/.kube/config" >> ~/.bashrc
+      export KUBECONFIG=$HOME/.kube/config
 
   - name: Deploy network plugin (Calico)
     shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
