--- a/nautilus/nautilus/workspace/ansible_project/playbook/load_nautilus_img_master.yml
+++ b/nautilus/nautilus/workspace/ansible_project/playbook/load_nautilus_img_master.yml
@@ -19,7 +19,7 @@
     - name: Show local_tar_path
       debug:
         msg: "{{ abs_tar_path }}"
-        
+
     # -------------------------------
     # Load Image into containerd
     # -------------------------------
@@ -36,7 +36,7 @@
       command: ctr -n k8s.io images import {{ abs_tar_path }}
       register: import_result
 
-    - name: [master] Show containerd import command
+    - name: master > Show containerd import command
       debug:
         msg: "ctr -n k8s.io images import {{ abs_tar_path }}"
 
