--- a/nautilus/nautilus/workspace/ansible_project/playbook/load_nautilus_img.yml
+++ b/nautilus/nautilus/workspace/ansible_project/playbook/load_nautilus_img.yml
@@ -49,7 +49,7 @@
       command: "ctr -n k8s.io images remove {{ containerd_image_name }}"
       when: image_check.stdout != ""
 
-    - name: [worker] Load the image into containerd
+    - name: worker > Load the image into containerd
       command: ctr -n k8s.io images import {{ local_tar_path }}
       register: import_result
 
