--- a/nautilus-helm/templates/server.yaml
+++ b/nautilus-helm/templates/server.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mylocalhost
+  name: p-kr-fl-project
   labels:
-    app: mylocalhost
+    app: p-kr-fl-project
 spec:
   nodeSelector:
     kubernetes.io/hostname: master-node
@@ -19,16 +19,8 @@ spec:
     args:
       - >
         pip install --upgrade nvflare==2.5.2 torch tensorboard torchvision &&
-        /workspace/nautilus/nautilus/workspace/provision/{{ .Values.projectId }}/prod_00/mylocalhost/startup/sub_start.sh
+        /workspace/nautilus/nautilus/workspace/provision/{{ .Values.projectId }}/prod_00/p-kr-fl-project/startup/sub_start.sh
     ports:
       - containerPort: 8002
       - containerPort: 8003
-    volumeMounts:
-    - name: nvflare-startup
-      mountPath: /workspace/nautilus
   restartPolicy: Never
-  volumes:
-  - name: nvflare-startup
-    hostPath:
-      path: {{ .Values.mountPath }}
-      type: Directory
