--- a/nautilus-helm/templates/server.yaml
+++ b/nautilus-helm/templates/server.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: p-kr-fl-project
+  name: mylocalhost
   labels:
-    app: p-kr-fl-project
+    app: mylocalhost
 spec:
   nodeSelector:
     kubernetes.io/hostname: master-node
@@ -19,7 +19,7 @@ spec:
     args:
       - >
         pip install --upgrade nvflare==2.5.2 torch tensorboard torchvision &&
-        /workspace/nautilus/nautilus/workspace/provision/{{ .Values.projectId }}/prod_00/p-kr-fl-project/startup/sub_start.sh
+        /workspace/nautilus/nautilus/workspace/provision/{{ .Values.projectId }}/prod_00/mylocalhost/startup/sub_start.sh
     ports:
       - containerPort: 8002
       - containerPort: 8003
