update helm install

--- a/nautilus-helm/templates/server.yaml
+++ b/nautilus-helm/templates/server.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mylocalhost
+  namespace: {{ .Values.namespace }}
   labels:
     app: mylocalhost
 spec:
