--- a/nautilus-helm/values.yaml
+++ b/nautilus-helm/values.yaml
@@ -1,4 +1,5 @@
-projectId: p-kr-fl-project
+namespace: nvflare-system
+projectId: p-kr-federated-learning-pj-01
 image: nautilus-pv-updated:latest
 mountPath: /tmp/Nautilus
 numClients: 4
