--- a/nautilus-helm/templates/client.yaml
+++ b/nautilus-helm/templates/client.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nvflare-client-{{ include "add1" $i }}
+  namespace: {{ $.Values.namespace }}
 spec:
   nodeSelector:
     kubernetes.io/hostname: master-node
