update helm install

--- a/nautilus-helm/values.yaml
+++ b/nautilus-helm/values.yaml
@@ -1,4 +1,4 @@
-namespace: nvflare-system
+namespace: nautilus
 projectId: p-kr-federated-learning-pj-01
 image: nautilus-pv-updated:latest
 mountPath: /tmp/Nautilus
