--- a/nautilus-helm/templates/server.yaml
+++ b/nautilus-helm/templates/server.yaml
@@ -19,7 +19,8 @@ spec:
     command: ["/bin/bash", "-c"]
     args:
       - >
-        pip install --upgrade nvflare==2.5.2 torch tensorboard torchvision &&
+        pip install --upgrade nvflare==2.5.2 torch tensorboard torchvision scipy pulp scikit-learn libgl1 opencv-python &&
+        python3 /workspace/nautilus/nautilus/api/datasetDownload.py &&
         /workspace/nautilus/nautilus/workspace/provision/{{ .Values.projectId }}/prod_00/mylocalhost/startup/sub_start.sh
     ports:
       - containerPort: 8002
