--- a/nautilus-helm/templates/server.yaml
+++ b/nautilus-helm/templates/server.yaml
@@ -12,6 +12,11 @@ spec:
     - key: "node.kubernetes.io/disk-pressure"
       operator: "Exists"
       effect: "NoSchedule"
+  volumes:
+    - name: dshm
+      emptyDir:
+        medium: Memory
+        sizeLimit: "1Gi"
   containers:
   - name: server
     image: {{ .Values.image }}
@@ -19,10 +24,20 @@ spec:
     command: ["/bin/bash", "-c"]
     args:
       - >
-        pip install --upgrade nvflare==2.5.2 torch tensorboard torchvision scipy pulp scikit-learn libgl1 opencv-python &&
+        pip install --upgrade nvflare==2.5.2 torch tensorboard torchvision scipy pulp scikit-learn opencv-python tqdm &&
         python3 /workspace/nautilus/nautilus/api/datasetDownload.py &&
         /workspace/nautilus/nautilus/workspace/provision/{{ .Values.projectId }}/prod_00/mylocalhost/startup/sub_start.sh
     ports:
       - containerPort: 8002
       - containerPort: 8003
+    volumeMounts:
+      - mountPath: /dev/shm
+        name: dshm
+    resources:
+      requests:
+        cpu: "4"
+        memory: "4Gi"
+      limits:
+        cpu: "4"
+        memory: "8Gi"
   restartPolicy: Never
