--- a/nautilus-helm/templates/server-service.yaml
+++ b/nautilus-helm/templates/server-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mylocalhost
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: mylocalhost
